# Opengl_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: basic.frag  basic.vert
debug/: opengl_project
include/: shader.h
include/glad/: glad.h
shaders/: shader.fs  shader.vs
src/: glad.c  main.cpp
src/core/: application.cpp  application.h  input.cpp  input.h  window.cpp  window.h
src/renderer/: index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/scene/: camera.cpp  camera.h
src/ui/: imgui_layer.cpp  imgui_layer.h
src/utility/: paths.h
